[tool.poetry]
name = "latticebuilder"
version = "0.1.0"
description = ""
authors = ["Tom Mertens <tom.mertens@helmholtz-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.4b2"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
